--- a/TODO
+++ b/TODO
@@ -14,3 +14,12 @@ Video background
 
 
 Look into shared classes for pages (eg. <div class="about page1"> and <div class="gaming page1">)
+
+
+
+USEFUL LINKS:
+
+https://responsivedesign.is/develop/browser-feature-support/media-queries-for-common-device-breakpoints/
+http://screensiz.es/
+https://speckyboy.com/underline-text-effects-css/
+https://uxpin.s3.amazonaws.com/responsive_web_design_cheatsheet.pdf
